--- a/consumer/src/main/resources/public/index.html
+++ b/consumer/src/main/resources/public/index.html
@@ -9,6 +9,6 @@
     <li><a href='/checkout?id=500'>Test with id=500 (error)</a><br><br></li>
 </ul>
 
-Code available on: <a href="/github">github.com</a>
+Example project available on: <a href="/github">github.com</a>
 </body>
 </html>
